--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <section class="main-section" id="Syntax">
             <header>Syntax</header>
             <p>Syntax is the structure of statements , Here is a simple program typed in C# to discuss the meaning of syntax</p>
-            <pre><code>using System;
+            <pre><code id="syntax">using System;
 namespace Hello
 {
     class MyProgram
@@ -60,6 +60,8 @@ namespace Hello
         }
     }
 }</code></pre>
+<button class="copy-btn" onclick="copyToClipboard('syntax')">Copy Text</button>
+
         </section>
 
         <section class="main-section" id="Data_Types">
@@ -78,48 +80,82 @@ namespace Hello
             <header>Variables</header>
             <p>Variables are containers for storing data values.</p>
             <p>The syntax for declaring a variable and assigning a value to it is as following :</p>
-            <pre><code>data-type variable-name = value(data) ;</code></pre>
+            <pre><code id="var">data-type variable-name = value(data) ;</code></pre>
+            <button class="copy-btn" onclick="copyToClipboard('var')">Copy Text</button>
+
             <p>For example :-</p>
-            <pre><code>int age = 20 ;
+            <pre><code id="variables">int age = 20 ;
 string FirstName = "AAA" ;
 string full_name = "AAA BBB" ;
 double _degree = 80.5 ;
 char grade = 'A' ;
 bool student = true ;
 bool male = true ;</code></pre>
+<button class="copy-btn" onclick="copyToClipboard('variables')">Copy Text</button>
+
         </section>
 
         <section class="main-section" id="Type_Casting">
             <header>Type Casting</header>
             <p>Type casting means turning a certain data from a type to another one.</p>
             <p>Syntax for type casting is :-</p>
-            <pre><code>(data-type) data</code></pre>
+            <pre><code id="data">(data-type) data</code></pre>
+            <button class="copy-btn" onclick="copyToClipboard('data')">Copy Text</button>
+
             <p>For example :-</p>
-            <pre><code>double pi = 3.14 ;
+            <pre><code id="data_type">double pi = 3.14 ;
 int myInt = (int) pi ;
 Console.WriteLine(pi) ; // 3.14
 Console.WriteLine(myInt) ; // 3</code></pre>
+<button class="copy-btn" onclick="copyToClipboard('data_type')">Copy Text</button>
+
         </section>
 
         <section class="main-section" id="User_Input">
             <header>User Input</header>
             <p>You already know that Console.WriteLine() is used to output text.</p>
             <p>Now you are going to learn how to use Console.ReadLine() to get user input.</p>
-            <pre><code>Console.ReadLine();</code></pre>
+            <pre><code id="console">Console.ReadLine();</code></pre>
+            <button class="copy-btn" onclick="copyToClipboard('console')">Copy Text</button>
+
             <p>For example :-</p>
-            <pre><code>int age ;
+            <pre><code id="user_input">int age ;
 Console.Write("Enter your age:") ;
 age = Console.ReadLine() ;
 Console.WriteLine("You are " + age + " years old") ;</code></pre>
-        </section>
+<button class="copy-btn" onclick="copyToClipboard('user_input')">Copy Text</button>
+
+
+</section>
 
         <section class="main-section" id="Booleans">
             <header>Booleans</header>
             <p>Booleans are data types that can be used to control whether something is true or false(yes or no / on or off).</p>
-            <pre><code>bool male = true ;
+            <pre><code id="codeBlock1">
+bool male = true ;
 bool student = true ;
 bool permission_accepted = false ;</code></pre>
+<button class="copy-btn" onclick="copyToClipboard('codeBlock1')">Copy Text</button>
+
         </section>
+       
+        <script>
+            function copyToClipboard(id) {
+                const codeBlock = document.getElementById(id);
+                const textArea = document.createElement("textarea");
+                textArea.value = codeBlock.textContent;
+                document.body.appendChild(textArea);
+                textArea.select();
+                document.execCommand("copy");
+                document.body.removeChild(textArea);
+                alert("Copied the text: " + textArea.value);
+            }
+        </script>
+
+
     </main>
+
 </body>
 </html>
+
+
